--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.621718, 19.926624], nom: "Mouillage au pied des remparts de la vieille citadelle de Corfou, île de Corfou", date: "16 août 2025", image: "https://static.wixstatic.com/media/e51b28_af7b7d7b4c1242ce8b7e496b48cf20b9~mv2.jpeg", lien: "https://www.andyboat.com/post/les-vacances-à-4-à-corfou"},
     { coords: [39.181844, 20.203021], nom: "Mouillage Baie de Mongonissi, île de Paxos", date: "20 août 2025", image: "https://static.wixstatic.com/media/e51b28_fe7a2cd5b29545d3bbf1fdc37d8c510c~mv2.jpeg", lien: "https://www.andyboat.com/post/paxos", lien: "https://www.andyboat.com/post/mouillage-à-la-grecque", lien: "https://www.andyboat.com/post/navigation-entre-corfou-et-paxos"},
     { coords: [38.654792, 20.798423], nom: "Mouillage Ormos Elia, île de Meganisi", date: "23 août 2025", image: "https://static.wixstatic.com/media/e51b28_134c8887703c4e51a82307395b891a72~mv2.jpeg", lien: "https://www.andyboat.com/post/meganisi"},
-    { coords: [38.364968, 20.737907], nom: "Mouillage Ormos Sarakiniko, île de Ithaque", date: "27 août 2025", image: "https://static.wixstatic.com/media/e51b28_88d2d78285e2480fa24aa88b876eba9c~mv2.jpeg"},
-    { coords: [38.250034, 21.734240], nom: "Port de Patras, quai 8 public, Péloponnèse", date: "31 août 2025"},
+    { coords: [38.364968, 20.737907], nom: "Mouillage Ormos Sarakiniko, île de Ithaque", date: "27 août 2025", image: "https://static.wixstatic.com/media/e51b28_88d2d78285e2480fa24aa88b876eba9c~mv2.jpeg", lien: "https://www.andyboat.com/post/ithaque", lien: "https://www.andyboat.com/post/le-vent-catastrophique"},
+    { coords: [38.250034, 21.734240], nom: "Port de Patras, quai 8 public, Péloponnèse", date: "31 août 2025", image: "https://static.wixstatic.com/media/e51b28_f0fdd7143ffa47719142b46ebf26afc1~mv2.png", lien: "https://www.andyboat.com/post/patras"},
     { coords: [38.375996, 22.387272], nom: "Port de Galaxidi, golf de Corinthe", date: "1 septembre 2025"},
   ];
 
