--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
     [38.258402, 21.115723], [38.254560, 21.701088], [38.261224, 21.733832], [38.252867, 21.733618],
     [38.250034, 21.734240], [38.261224, 21.733832], [38.305429, 21.735764], [38.347984, 21.845627],
     [38.346705, 22.013855], [38.279022, 22.289886], [38.361243, 22.421036], [38.386998, 22.409792],
-    [38.386527, 22.395630], [38.375996, 22.387272], 
+    [38.386527, 22.395630], [38.375996, 22.387272], [38.386527, 22.395630], [38.386998, 22.409792],
+    [38.269185, 22.550812], [37.945196, 22.938938], [37.940944, 22.936621], [37.953163, 22.957907],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -268,6 +269,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [38.364968, 20.737907], nom: "Mouillage Ormos Sarakiniko, île de Ithaque", date: "27 août 2025", image: "https://static.wixstatic.com/media/e51b28_88d2d78285e2480fa24aa88b876eba9c~mv2.jpeg", lien: "https://www.andyboat.com/post/ithaque", lien: "https://www.andyboat.com/post/le-vent-catastrophique"},
     { coords: [38.250034, 21.734240], nom: "Port de Patras, quai 8 public, Péloponnèse", date: "31 août 2025", image: "https://static.wixstatic.com/media/e51b28_f0fdd7143ffa47719142b46ebf26afc1~mv2.png", lien: "https://www.andyboat.com/post/patras"},
     { coords: [38.375996, 22.387272], nom: "Port de Galaxidi, golf de Corinthe", date: "1 septembre 2025"},
+    { coords: [37.940944, 22.936621], nom: "Port de Corinthe", date: "9 septembre 20253"},
   ];
 
        var isMobile = window.innerWidth < 768;
