--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [38.654792, 20.798423], nom: "Mouillage Ormos Elia, île de Meganisi", date: "23 août 2025", image: "https://static.wixstatic.com/media/e51b28_134c8887703c4e51a82307395b891a72~mv2.jpeg", lien: "https://www.andyboat.com/post/meganisi"},
     { coords: [38.364968, 20.737907], nom: "Mouillage Ormos Sarakiniko, île de Ithaque", date: "27 août 2025", image: "https://static.wixstatic.com/media/e51b28_88d2d78285e2480fa24aa88b876eba9c~mv2.jpeg", lien: "https://www.andyboat.com/post/ithaque", lien: "https://www.andyboat.com/post/le-vent-catastrophique"},
     { coords: [38.250034, 21.734240], nom: "Port de Patras, quai 8 public, Péloponnèse", date: "31 août 2025", image: "https://static.wixstatic.com/media/e51b28_f0fdd7143ffa47719142b46ebf26afc1~mv2.png", lien: "https://www.andyboat.com/post/patras"},
-    { coords: [38.375996, 22.387272], nom: "Port de Galaxidi, golf de Corinthe", date: "1 septembre 2025"},
+    { coords: [38.375996, 22.387272], nom: "Port de Galaxidi, golf de Corinthe", date: "1 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_ce7512fa514c4033a5cd8112e3c8d2a0~mv2.jpeg"},
     { coords: [37.940944, 22.936621], nom: "Port de Corinthe", date: "9 septembre 20253"},
   ];
 
