--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
     [38.386998, 22.409792], [38.386527, 22.395630], [38.375996, 22.387272], [38.386527, 22.395630], 
     [38.386998, 22.409792], [38.269185, 22.550812], [37.945196, 22.938938], [37.940944, 22.936621], 
     [37.953163, 22.957907], [37.916453, 23.009577], [37.914807, 23.010435], [37.871110, 23.449631], 
-    [37.876882, 23.456497], 
+    [37.876882, 23.456497], [37.877462, 23.460707], [37.885881, 23.518137], [37.918146, 23.647484],
+    [37.933013, 23.654311], [37.932118, 23.649621], [37.936919, 23.648494],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -272,7 +273,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [38.250034, 21.734240], nom: "Port de Patras, quai 8 public, Péloponnèse", date: "31 août 2025", image: "https://static.wixstatic.com/media/e51b28_f0fdd7143ffa47719142b46ebf26afc1~mv2.png", lien: "https://www.andyboat.com/post/patras"},
     { coords: [38.375996, 22.387272], nom: "Port de Galaxidi, golf de Corinthe", date: "1 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_ce7512fa514c4033a5cd8112e3c8d2a0~mv2.jpeg"},
     { coords: [37.940944, 22.936621], nom: "Port de Corinthe", date: "9 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_e0ed6ffe9ef94f228da75f5f390d3bcf~mv2.jpeg"},
-    { coords: [37.876882, 23.456497], nom: "Mouillage Baie de Peristeria", date: "10 septembre 2025"},
+    { coords: [37.876882, 23.456497], nom: "Mouillage Baie de Peristeria, île de Salamine", date: "10 septembre 2025"},
+    { coords: [37.936919, 23.648494], nom: "D-Marin Zea Marina", date: "12 septembre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
