--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [38.250034, 21.734240], nom: "Port de Patras, quai 8 public, Péloponnèse", date: "31 août 2025", image: "https://static.wixstatic.com/media/e51b28_f0fdd7143ffa47719142b46ebf26afc1~mv2.png", lien: "https://www.andyboat.com/post/patras"},
     { coords: [38.375996, 22.387272], nom: "Port de Galaxidi, golf de Corinthe", date: "1 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_ce7512fa514c4033a5cd8112e3c8d2a0~mv2.jpeg"},
     { coords: [37.940944, 22.936621], nom: "Port de Corinthe", date: "9 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_e0ed6ffe9ef94f228da75f5f390d3bcf~mv2.jpeg"},
-    { coords: [37.876882, 23.456497], nom: "Mouillage Baie de Peristeria, île de Salamine", date: "10 septembre 2025"},
+    { coords: [37.876882, 23.456497], nom: "Mouillage Baie de Peristeria, île de Salamine", date: "10 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_8335c588566a47e9a8f91c3655f091c0~mv2.jpeg"},
     { coords: [37.936919, 23.648494], nom: "D-Marin Zea Marina", date: "12 septembre 2025"},
   ];
 
