--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.940944, 22.936621], nom: "Port de Corinthe", date: "9 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_e0ed6ffe9ef94f228da75f5f390d3bcf~mv2.jpeg"},
     { coords: [37.876882, 23.456497], nom: "Mouillage Baie de Peristeria, île de Salamine", date: "10 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_8335c588566a47e9a8f91c3655f091c0~mv2.jpeg"},
     { coords: [37.936919, 23.648494], nom: "D-Marin Zea Marina, Athènes", date: "12 septembre 2025"},
+    { coords: [37.931594, 23.682702], nom: "Flisvos Marina, Athènes", date: "19 septembre 2025"},
+    { coords: [37.364345, 24.397478], nom: "Mouillage Ormos Flampouria, île de Kythnos", date: "23 septembre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
