--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [38.375996, 22.387272], nom: "Port de Galaxidi, golf de Corinthe", date: "1 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_ce7512fa514c4033a5cd8112e3c8d2a0~mv2.jpeg"},
     { coords: [37.940944, 22.936621], nom: "Port de Corinthe", date: "9 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_e0ed6ffe9ef94f228da75f5f390d3bcf~mv2.jpeg"},
     { coords: [37.876882, 23.456497], nom: "Mouillage Baie de Peristeria, île de Salamine", date: "10 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_8335c588566a47e9a8f91c3655f091c0~mv2.jpeg"},
-    { coords: [37.936919, 23.648494], nom: "D-Marin Zea Marina, Athènes", date: "12 septembre 2025"},
-    { coords: [37.931594, 23.682702], nom: "Flisvos Marina, Athènes", date: "19 septembre 2025"},
-    { coords: [37.364345, 24.397478], nom: "Mouillage Ormos Flampouria, île de Kythnos", date: "23 septembre 2025"},
+    { coords: [37.936919, 23.648494], nom: "D-Marin Zea Marina, Athènes", date: "12 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_15df2782df714aef8cc06f35755b3b05~mv2.jpeg"},
+    { coords: [37.931594, 23.682702], nom: "Flisvos Marina, Athènes", date: "19 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_a49770977ec94a368826b28fb989ad0d~mv2.jpeg"},
+    { coords: [37.364345, 24.397478], nom: "Mouillage Ormos Flampouria, île de Kythnos", date: "23 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_2b41485ec9f942bcaa893aeb5a726b0b~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
