--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
     [37.933013, 23.654311], [37.933765, 23.667929], [37.935275, 23.678739], [37.931594, 23.682702], 
     [37.935275, 23.678739], [37.934633, 23.676623], [37.923068, 23.679091], [37.763314, 23.742850], 
     [37.626996, 23.941489], [37.364345, 24.397478], [37.411976, 24.361337], [37.447502, 24.363547],
-    [37.488157, 24.435602], [37.524054, 24.885750], [37.536017, 25.158031],
+    [37.488157, 24.435602], [37.524054, 24.885750], [37.536017, 25.158031], [37.536048, 25.160612],
+    [37.53757, 25.1615580],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -281,6 +282,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.936919, 23.648494], nom: "D-Marin Zea Marina, Athènes", date: "12 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_15df2782df714aef8cc06f35755b3b05~mv2.jpeg"},
     { coords: [37.931594, 23.682702], nom: "Flisvos Marina, Athènes", date: "19 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_a49770977ec94a368826b28fb989ad0d~mv2.jpeg"},
     { coords: [37.364345, 24.397478], nom: "Mouillage Ormos Flampouria, île de Kythnos", date: "23 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_2b41485ec9f942bcaa893aeb5a726b0b~mv2.jpeg"},
+    { coords: [37.53757, 25.1615580], nom: "Port de Tinos, île de Tinos", date: "24 septembre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
