--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
     [37.935275, 23.678739], [37.934633, 23.676623], [37.923068, 23.679091], [37.763314, 23.742850], 
     [37.626996, 23.941489], [37.364345, 24.397478], [37.411976, 24.361337], [37.447502, 24.363547],
     [37.488157, 24.435602], [37.524054, 24.885750], [37.536017, 25.158031], [37.536048, 25.160612],
-    [37.53757, 25.1615580],
+    [37.53757, 25.1615580], [37.536048, 25.160612], [37.536575, 25.155693], [37.523601, 25.162501],
+    [37.504065, 25.324578], [37.506214, 26.090427], [37.611271, 26.300268], [37.616442, 26.299592],
+    [37.615685, 26.297463],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -283,6 +285,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.931594, 23.682702], nom: "Flisvos Marina, Athènes", date: "19 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_a49770977ec94a368826b28fb989ad0d~mv2.jpeg"},
     { coords: [37.364345, 24.397478], nom: "Mouillage Ormos Flampouria, île de Kythnos", date: "23 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_2b41485ec9f942bcaa893aeb5a726b0b~mv2.jpeg"},
     { coords: [37.53757, 25.1615580], nom: "Port de Tinos, île de Tinos", date: "24 septembre 2025"},
+    { coords: [37.615685, 26.297463], nom: "Port de Agios Kirykos, île de Ikaria", date: "29 septembre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
