--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.936919, 23.648494], nom: "D-Marin Zea Marina, Athènes", date: "12 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_15df2782df714aef8cc06f35755b3b05~mv2.jpeg"},
     { coords: [37.931594, 23.682702], nom: "Flisvos Marina, Athènes", date: "19 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_a49770977ec94a368826b28fb989ad0d~mv2.jpeg"},
     { coords: [37.364345, 24.397478], nom: "Mouillage Ormos Flampouria, île de Kythnos", date: "23 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_2b41485ec9f942bcaa893aeb5a726b0b~mv2.jpeg"},
-    { coords: [37.537570, 25.1615580], nom: "Port de Tinos, île de Tinos", date: "24 septembre 2025"},
-    { coords: [37.615685, 26.297463], nom: "Port de Agios Kirykos, île de Ikaria", date: "29 septembre 2025"},
+    { coords: [37.537570, 25.161558], nom: "Port de Tinos, île de Tinos", date: "24 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_45d925b30272454f89bbac8d300d0d16~mv2.jpg"},
+    { coords: [37.615685, 26.297463], nom: "Port de Agios Kirykos, île de Ikaria", date: "29 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_9b430656eaab4c198b1d2a91dd398f05~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
