--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
     [37.611271, 26.300268], [37.616442, 26.299592], [37.615976, 26.298756], [37.615685, 26.297463],
     [37.615976, 26.298756], [37.616442, 26.299592], [37.631779, 26.328573], [37.686827, 26.382681],
     [38.190048, 26.761134], [38.202942, 26.768673], [38.198418, 26.782752], [38.195372, 26.783425], 
-    [38.194581, 26.781645], [38.193298, 26.78181],
+    [38.194581, 26.781645], [38.193298, 26.781810], [38.194581, 26.781645], [38.195372, 26.783425],
+    [38.198418, 26.782752], [38.202942, 26.768673], [37.632734, 26.185554], [37.631313, 26.179511],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -289,7 +290,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.364345, 24.397478], nom: "Mouillage Ormos Flampouria, île de Kythnos", date: "23 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_2b41485ec9f942bcaa893aeb5a726b0b~mv2.jpeg"},
     { coords: [37.537570, 25.161558], nom: "Port de Tinos, île de Tinos", date: "24 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_45d925b30272454f89bbac8d300d0d16~mv2.jpg"},
     { coords: [37.615685, 26.297463], nom: "Port de Agios Kirykos, île de Ikaria", date: "29 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_9b430656eaab4c198b1d2a91dd398f05~mv2.jpeg"},
-    { coords: [38.193298, 26.78181], nom: "Teos Marina, Turquie", date: "2 octobre 2025"},
+    { coords: [38.193298, 26.78181], nom: "Teos Marina, Turquie", date: "2 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_b7e257e322c642c4b8e12e997a2f08b1~mv2.jpeg"},
+    { coords: [37.631313, 26.179511], nom: "Port de Evdilos, île Ikaria, date: "13 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_0ab51cea453448ffb02122dbb93f41b1~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
