--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
     [37.146113, 25.395607], [37.104419, 25.364760], [37.103824, 25.374250], [37.104282, 25.374426],
     [37.103824, 25.374250], [37.094177, 25.340475], [37.080736, 25.320228], [37.009315, 25.258937], 
     [37.007954, 25.252782], [36.992829, 25.234885], [36.891871, 25.094629], [36.650350, 24.575523],
-    [36.558503, 24.144151], [36.415059, 23.188533], [36.448487, 22.966126], [36.382079, 22.483418], 
+    [36.558503, 24.144151], [36.415059, 23.188533], [36.448487, 22.966126], [36.382079, 22.483418],
+    [36.70757, 21.9111180], [36.709799, 21.872936], [36.804571, 21.701688], [37.034282, 21.529499], 
+    [37.715534, 21.106665], [37.779209, 20.916498], [37.780971, 20.904027], [37.783154, 20.901175], 
+    [37.784479, 20.902293], 
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -298,6 +301,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [38.193298, 26.78181], nom: "Teos Marina, Turquie", date: "2 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_b7e257e322c642c4b8e12e997a2f08b1~mv2.jpeg"},
     { coords: [37.631313, 26.179511], nom: "Port de Evdilos, île de Ikaria", date: "13 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_0ab51cea453448ffb02122dbb93f41b1~mv2.jpeg"},
     { coords: [37.104282, 25.374426], nom: "Marine de Naxos, île de Naxos", date: "14 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_5137603224d04dd2b435db05da7427e9~mv2.jpeg"},
+    { coords: [37.784479, 20.902293], nom: "Yachting Club Zakynthos, île de Zakynthos (Zante)", date: "17 octobre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
