Update marina entries with corrected names and dates

--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.931594, 23.682702], nom: "Flisvos Marina, Athènes", date: "19 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_a49770977ec94a368826b28fb989ad0d~mv2.jpeg"},
     { coords: [37.364345, 24.397478], nom: "Mouillage Ormos Flampouria, île de Kythnos", date: "23 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_2b41485ec9f942bcaa893aeb5a726b0b~mv2.jpeg"},
     { coords: [37.537570, 25.161558], nom: "Port de Tinos, île de Tinos", date: "24 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_45d925b30272454f89bbac8d300d0d16~mv2.jpg"},
-    { coords: [37.615685, 26.297463], nom: "Port de Agios Kirykos, île de Ikaria", date: "29 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_9b430656eaab4c198b1d2a91dd398f05~mv2.jpeg"},
-    { coords: [38.193298, 26.78181], nom: "Teos Marina, Turquie", date: "2 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_b7e257e322c642c4b8e12e997a2f08b1~mv2.jpeg"},
-    { coords: [37.631313, 26.179511], nom: "Port de Evdilos, île de Ikaria", date: "13 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_0ab51cea453448ffb02122dbb93f41b1~mv2.jpeg"},
+    { coords: [37.615685, 26.297463], nom: "Port de Agios Kirykos, île de Ikaria (Icarie)", date: "29 septembre 2025", image: "https://static.wixstatic.com/media/e51b28_9b430656eaab4c198b1d2a91dd398f05~mv2.jpeg"},
+    { coords: [38.193298, 26.781810], nom: "Teos Marina, Turquie", date: "2 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_b7e257e322c642c4b8e12e997a2f08b1~mv2.jpeg"},
+    { coords: [37.631313, 26.179511], nom: "Port de Evdilos, île de Ikaria (Icarie)", date: "13 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_0ab51cea453448ffb02122dbb93f41b1~mv2.jpeg"},
     { coords: [37.104282, 25.374426], nom: "Marine de Naxos, île de Naxos", date: "14 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_5137603224d04dd2b435db05da7427e9~mv2.jpeg"},
     { coords: [37.784479, 20.902293], nom: "Yachting Club Zakynthos, île de Zakynthos (Zante)", date: "17 octobre 2025"},
   ];
