--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
     [36.558503, 24.144151], [36.415059, 23.188533], [36.448487, 22.966126], [36.382079, 22.483418],
     [36.70757, 21.9111180], [36.709799, 21.872936], [36.804571, 21.701688], [37.034282, 21.529499], 
     [37.715534, 21.106665], [37.779209, 20.916498], [37.780971, 20.904027], [37.783154, 20.901175], 
-    [37.784479, 20.902293], 
+    [37.784479, 20.902293], [37.783154, 20.901175], [37.780971, 20.904027], [37.779209, 20.916498],
+    [37.812742, 20.918023], [38.009177, 20.677661], [38.324922, 16.428496], [38.325422, 16.430054],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -302,6 +303,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.631313, 26.179511], nom: "Port de Evdilos, île de Ikaria (Icarie)", date: "13 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_0ab51cea453448ffb02122dbb93f41b1~mv2.jpeg"},
     { coords: [37.104282, 25.374426], nom: "Marine de Naxos, île de Naxos", date: "14 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_5137603224d04dd2b435db05da7427e9~mv2.jpeg"},
     { coords: [37.784479, 20.902293], nom: "Yachting Club Zakynthos, île de Zakynthos (Zante)", date: "17 octobre 2025"},
+    { coords: [38.325422, 16.430054], nom: "Port de Roccella", date: "21 octobre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
