--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.631313, 26.179511], nom: "Port de Evdilos, île de Ikaria (Icarie)", date: "13 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_0ab51cea453448ffb02122dbb93f41b1~mv2.jpeg"},
     { coords: [37.104282, 25.374426], nom: "Marine de Naxos, île de Naxos", date: "14 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_5137603224d04dd2b435db05da7427e9~mv2.jpeg"},
     { coords: [37.784479, 20.902293], nom: "Yachting Club Zakynthos, île de Zakynthos (Zante)", date: "17 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_620fb8a326df4a99a7d0bbf52217c1ba~mv2.jpeg"},
-    { coords: [38.325422, 16.430054], nom: "Port de Roccella", date: "21 octobre 2025"},
+    { coords: [38.325422, 16.430054], nom: "Port de Roccella", date: "22 juillet 2025 puis 21 octobre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
