--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
     [37.715534, 21.106665], [37.779209, 20.916498], [37.780971, 20.904027], [37.783154, 20.901175], 
     [37.784479, 20.902293], [37.783154, 20.901175], [37.780971, 20.904027], [37.779209, 20.916498],
     [37.812742, 20.918023], [38.009177, 20.677661], [38.323900, 16.431222], [38.324922, 16.428496], 
-    [38.325422, 16.430054],
+    [38.325422, 16.430054], [37.917856, 16.067577], [37.905693, 15.998207], [37.906959, 15.771946],
+    [37.942402, 15.669246], [38.011972, 15.622710], [38.101591, 15.620293], [38.129324, 15.649789],
+    [38.127018, 15.651099],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -279,7 +281,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [38.476799, 14.962392], nom: "Porto Pignataro Lipari (îles Eoliennes)", date: "11 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_d64c3a0bf7e24e749aa5478e3af50b68~mv2.jpeg", lien:"https://www.andyboat.com/post/lipari", galerie: "https://www.andyboat.com/copie-de-photos-ventotène#lipari"},
     { coords: [37.846765, 15.288334], nom: "Mouillage bouée Baia di Taormina", date: "14 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_3f48ff640af04726aa647b6c5abbf753~mv2.jpeg", galerie:"https://andyboat.com/copie-de-photos-lipari#taormina", lien: "https://www.andyboat.com/post/passage-du-détroit-de-messine"},
     { coords: [37.062218, 15.289503], nom: "Port de Syracuse", date: "15 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_bd49b1a504bd432580937506b4e04666~mv2.jpeg", galerie: "https://andyboat.com/copie-de-photos-taormina#taormina", lien: "https://www.andyboat.com/post/la-boussole"},
-    { coords: [38.325422, 16.430054], nom: "Port de Roccella", date: "22 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_358f697fb77545de8d662661167cce43~mv2.jpeg", lien: "https://www.andyboat.com/post/roccella-au-feu-les-pompiers-l-italie-qui-brûle"},
+    { coords: [38.325422, 16.430054], nom: "Port de Roccella, Calabre", date: "22 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_358f697fb77545de8d662661167cce43~mv2.jpeg", lien: "https://www.andyboat.com/post/roccella-au-feu-les-pompiers-l-italie-qui-brûle"},
     { coords: [39.077142, 17.135582], nom: "Port de Crotone", date: "24 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_1432513515084d22b761b713b9e0206b~mv2.jpeg", lien: "https://www.andyboat.com/post/crotone"},
     { coords: [39.794383, 18.358111], nom: "Porto di Santa Maria di Leuca", date: "26 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_59bd850292044aee8a81984cabf40747~mv2.jpeg", lien: "https://www.andyboat.com/post/leuca"},
     { coords: [40.641410, 17.940674], nom: "Porto di Brindisi", date: "28 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_61ac5b61d27d43d2a53cf64ab65e30ce~mv2.jpg"},
@@ -304,7 +306,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.631313, 26.179511], nom: "Port de Evdilos, île de Ikaria (Icarie)", date: "13 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_0ab51cea453448ffb02122dbb93f41b1~mv2.jpeg"},
     { coords: [37.104282, 25.374426], nom: "Marine de Naxos, île de Naxos", date: "14 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_5137603224d04dd2b435db05da7427e9~mv2.jpeg"},
     { coords: [37.784479, 20.902293], nom: "Yachting Club Zakynthos, île de Zakynthos (Zante)", date: "17 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_620fb8a326df4a99a7d0bbf52217c1ba~mv2.jpeg"},
-    { coords: [38.325422, 16.430054], nom: "Port de Roccella", date: "22 juillet 2025 puis 21 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_3c1c4449ea9e497db13b83d9f64b1a71~mv2.jpeg"},
+    { coords: [38.325422, 16.430054], nom: "Port de Roccella, Calabre", date: "22 juillet 2025 puis 21 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_3c1c4449ea9e497db13b83d9f64b1a71~mv2.jpeg"},
+    { coords: [38.127018, 15.651099], nom: "Marina queen 88, Calabre", date: 25 octobre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
