--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
     [37.812742, 20.918023], [38.009177, 20.677661], [38.323900, 16.431222], [38.324922, 16.428496], 
     [38.325422, 16.430054], [37.917856, 16.067577], [37.905693, 15.998207], [37.906959, 15.771946],
     [37.942402, 15.669246], [38.011972, 15.622710], [38.101591, 15.620293], [38.129324, 15.649789],
-    [38.127018, 15.651099],
+    [38.127018, 15.651099], [38.143864, 15.645430], [38.230908, 15.615898], [38.277290, 15.737102], 
+    [38.626801, 15.796235], [38.678711, 15.858484], [38.684290, 15.906833], [38.682572, 15.906585],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -308,6 +309,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [37.784479, 20.902293], nom: "Yachting Club Zakynthos, île de Zakynthos (Zante)", date: "17 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_620fb8a326df4a99a7d0bbf52217c1ba~mv2.jpeg"},
     { coords: [38.325422, 16.430054], nom: "Port de Roccella, Calabre", date: "22 juillet 2025 puis 21 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_3c1c4449ea9e497db13b83d9f64b1a71~mv2.jpeg"},
     { coords: [38.127018, 15.651099], nom: "Marina queen 88, Calabre", date: "25 octobre 2025"},
+    { coords: [38.682572, 15.906585], nom: "Port de Tropea, calabre", date: "26 octobre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
