--- a/index.html
+++ b/index.html
@@ -186,6 +186,11 @@
     [38.626801, 15.796235], [38.678711, 15.858484], [38.684290, 15.906833], [38.682572, 15.906585],
     [38.703837, 15.920523], [39.524396, 15.922845], [39.526454, 15.920473], [39.527206, 15.918553],
     [39.526454, 15.920473], [39.524396, 15.922845], [39.522452, 15.919829], [39.534772, 15.875495],
+    [39.991549, 15.384632], [39.998489, 15.379420], [39.999103, 15.375947], [39.998489, 15.379420],
+    [39.995554, 15.378862], [39.997588, 15.310109], [40.242845, 14.883347], [40.354612, 14.948693], 
+    [40.355558, 14.983668], [40.351557, 14.982049], [40.355558, 14.983668], [40.406266, 14.895559], 
+    [40.561006, 14.282596], [40.749414, 13.956080], [40.753883, 13.919497], [40.751152, 13.908388],
+    [40.749953, 13.907425],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -313,6 +318,9 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [38.127018, 15.651099], nom: "Marina queen 88, Calabre", date: "25 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_0d8eaffd8e1e48db9bdc5234b2a82c36~mv2.jpeg"},
     { coords: [38.682572, 15.906585], nom: "Port de Tropea, Calabre", date: "26 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_bb26b08d2d8e4a6d866fe23eb10e57bf~mv2.jpeg"},
     { coords: [39.527206, 15.918553], nom: "Port de Cetraro, Calabre", date: "29 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_cb665e3e86d14043811edc909e2c53e7~mv2.jpeg"},
+    { coords: [39.999103, 15.375947], nom: "Port de Camerota, Campanie", date: "30 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_76c7f09c35334267899edf05cbfea5eb~mv2.jpeg"},
+    { coords: [40.351557, 14.982049], nom: "Port de Agropoli, Campanie", date: "31 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_24252a98f5c7462c8b547abe12f916c2~mv2.jpeg"},
+    { coords: [40.749953, 13.907425], nom: "Marina de Casamicciola, île de Ischia", date: "1 novembre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
