--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
     [40.355558, 14.983668], [40.351557, 14.982049], [40.355558, 14.983668], [40.406266, 14.895559], 
     [40.561006, 14.282596], [40.749414, 13.956080], [40.753883, 13.919497], [40.751152, 13.908388],
     [40.749953, 13.907425], [40.751152, 13.908388], [40.752907, 13.913332], [41.211353, 13.593799],
-    [41.218246, 13.577912], [41.215022, 13.574439], [],[],[],[],[],[],[],
+    [41.218246, 13.577912], [41.215022, 13.574439], [41.218246, 13.577912], [41.208180, 13.603997],
+    [41.193917, 13.573001], [41.185564, 13.048510], [41.450231, 12.659346], [41.452228, 12.659623],
+    [41.450231, 12.659346], [41.439585, 12.636177], [41.442086, 12.612174], [41.738868, 12.229981],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -322,7 +324,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.999103, 15.375947], nom: "Port de Camerota, Campanie", date: "30 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_76c7f09c35334267899edf05cbfea5eb~mv2.jpeg"},
     { coords: [40.351557, 14.982049], nom: "Port de Agropoli, Campanie", date: "31 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_24252a98f5c7462c8b547abe12f916c2~mv2.jpeg"},
     { coords: [40.749953, 13.907425], nom: "Marina de Casamicciola, île de Ischia", date: "1 novembre 2025"},
-    { coords: [41.215022, 13.574439], nom: "Base Nautica Flavio Gioia, Port de Gaeta", date: "10 novembre 20252"},
+    { coords: [41.215022, 13.574439], nom: "Base Nautica Flavio Gioia, Port de Gaeta", date: "10 novembre 2025"},
+    { coords: [41.452228, 12.659623], nom: "Marina de Nettuno", date: "11 novembre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
