--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.527206, 15.918553], nom: "Port de Cetraro, Calabre", date: "29 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_cb665e3e86d14043811edc909e2c53e7~mv2.jpeg"},
     { coords: [39.999103, 15.375947], nom: "Port de Camerota, Campanie", date: "30 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_76c7f09c35334267899edf05cbfea5eb~mv2.jpeg"},
     { coords: [40.351557, 14.982049], nom: "Port de Agropoli, Campanie", date: "31 octobre 2025", image: "https://static.wixstatic.com/media/e51b28_24252a98f5c7462c8b547abe12f916c2~mv2.jpeg"},
-    { coords: [40.749953, 13.907425], nom: "Marina de Casamicciola, île de Ischia", date: "1 novembre 2025"},
-    { coords: [41.215022, 13.574439], nom: "Base Nautica Flavio Gioia, Port de Gaeta", date: "10 novembre 2025"},
-    { coords: [41.452228, 12.659623], nom: "Marina de Nettuno", date: "11 novembre 2025"},
+    { coords: [40.749953, 13.907425], nom: "Marina de Casamicciola, île de Ischia", date: "1 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_ae9fb7805cf443988f2a86563db527e3~mv2.jpeg"},
+    { coords: [41.215022, 13.574439], nom: "Base Nautica Flavio Gioia, Port de Gaeta", date: "10 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_d93c6fd42b63476d8112b08a837aa24f~mv2.jpeg"},
+    { coords: [41.452228, 12.659623], nom: "Marina de Nettuno", date: "11 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_7b52ca3df3dc46b09c8b53306ed66f78~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
