--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
     [41.218246, 13.577912], [41.215022, 13.574439], [41.218246, 13.577912], [41.208180, 13.603997],
     [41.193917, 13.573001], [41.185564, 13.048510], [41.450231, 12.659346], [41.452228, 12.659623],
     [41.450231, 12.659346], [41.439585, 12.636177], [41.442086, 12.612174], [41.738868, 12.229981],
+    [41.740651, 12.233684], [41.743986, 12.247137], [41.745725, 12.256104], [41.747741, 12.260946],
+    [41.749274, 12.265031], [41.747741, 12.260946], [41.745725, 12.256104], [41.743986, 12.247137],
+    [41.740651, 12.233684],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -326,6 +329,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [40.749953, 13.907425], nom: "Marina de Casamicciola, île de Ischia", date: "1 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_ae9fb7805cf443988f2a86563db527e3~mv2.jpeg"},
     { coords: [41.215022, 13.574439], nom: "Base Nautica Flavio Gioia, Port de Gaeta", date: "10 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_d93c6fd42b63476d8112b08a837aa24f~mv2.jpeg"},
     { coords: [41.452228, 12.659623], nom: "Marina de Nettuno", date: "11 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_7b52ca3df3dc46b09c8b53306ed66f78~mv2.jpeg"},
+    { coords: [41.749274, 12.265031], nom: "Marina Blue Dolphin, Fiumicino, sur le Tibre, au porte de Rome", date: "12 novenbre 2025", image: "https://static.wixstatic.com/media/e51b28_738e0e307e9a4e8a8e26f347f4395d9c~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
