--- a/index.html
+++ b/index.html
@@ -196,7 +196,10 @@
     [41.450231, 12.659346], [41.439585, 12.636177], [41.442086, 12.612174], [41.738868, 12.229981],
     [41.740651, 12.233684], [41.743986, 12.247137], [41.745725, 12.256104], [41.747741, 12.260946],
     [41.749274, 12.265031], [41.747741, 12.260946], [41.745725, 12.256104], [41.743986, 12.247137],
-    [41.740651, 12.233684],
+    [41.740651, 12.233684], [41.740541, 12.216560], [42.007560, 11.819474], [42.065471, 11.803238], 
+    [42.067369, 11.809697], [42.066082, 11.810390], [42.064570, 11.810867], [42.066082, 11.810390],
+    [42.067369, 11.809697], [42.405103, 11.212703], [42.402115, 11.211099], [42.401760, 11.210145],
+    [42.402115, 11.211099], [42.405103, 11.212703],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -330,6 +333,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [41.215022, 13.574439], nom: "Base Nautica Flavio Gioia, Port de Gaeta", date: "10 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_d93c6fd42b63476d8112b08a837aa24f~mv2.jpeg"},
     { coords: [41.452228, 12.659623], nom: "Marina de Nettuno", date: "11 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_7b52ca3df3dc46b09c8b53306ed66f78~mv2.jpeg"},
     { coords: [41.749274, 12.265031], nom: "Marina Blue Dolphin, Fiumicino, sur le Tibre, au porte de Rome", date: "12 novenbre 2025", image: "https://static.wixstatic.com/media/e51b28_738e0e307e9a4e8a8e26f347f4395d9c~mv2.jpeg"},
+    { coords: [42.064570, 11.810867], nom: "Port de Riva Di Traiano", date: "13 novembre 2025"},
+    { coords: [42.401760, 11.210145], nom: "Marina Cala Galera à Port Ercole, Toscane", date: "14 novembre 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
