--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [41.452228, 12.659623], nom: "Marina de Nettuno, Latium", date: "11 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_7b52ca3df3dc46b09c8b53306ed66f78~mv2.jpeg"},
     { coords: [41.749274, 12.265031], nom: "Marina Blue Dolphin, Fiumicino, sur le Tibre, au porte de Rome, Latium", date: "12 novenbre 2025", image: "https://static.wixstatic.com/media/e51b28_738e0e307e9a4e8a8e26f347f4395d9c~mv2.jpeg"},
     { coords: [42.064570, 11.810867], nom: "Port de Riva Di Traiano, Latium", date: "13 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_e980e334f1f74f58b6a302b250857115~mv2.jpeg"},
-    { coords: [42.401760, 11.210145], nom: "Marina Cala Galera à Porto Ercole, Toscane", date: "14 novembre 2025"},
+    { coords: [42.401760, 11.210145], nom: "Marina Cala Galera à Porto Ercole, Toscane", date: "14 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_f0ac5c671deb40e1a2e0e7786afc5ea8~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
