--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
     [41.740651, 12.233684], [41.740541, 12.216560], [42.007560, 11.819474], [42.065471, 11.803238], 
     [42.067369, 11.809697], [42.066082, 11.810390], [42.064570, 11.810867], [42.066082, 11.810390],
     [42.067369, 11.809697], [42.405103, 11.212703], [42.402115, 11.211099], [42.401760, 11.210145],
-    [42.402115, 11.211099], [42.405103, 11.212703],
+    [42.402115, 11.211099], [42.405103, 11.212703], [42.403734, 11.215390], [42.379133, 11.216895],
+    [42.359123, 11.194564], [42.356372, 11.152585], [42.392877, 11.071326], [42.753432, 10.425559],
+    [42.762698, 42.762698], [42.764404, 10.397397], [42.762698, 42.762698],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -335,6 +337,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [41.749274, 12.265031], nom: "Marina Blue Dolphin, Fiumicino, sur le Tibre, au porte de Rome, Latium", date: "12 novenbre 2025", image: "https://static.wixstatic.com/media/e51b28_738e0e307e9a4e8a8e26f347f4395d9c~mv2.jpeg"},
     { coords: [42.064570, 11.810867], nom: "Port de Riva Di Traiano, Latium", date: "13 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_e980e334f1f74f58b6a302b250857115~mv2.jpeg"},
     { coords: [42.401760, 11.210145], nom: "Marina Cala Galera à Porto Ercole, Toscane", date: "14 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_f0ac5c671deb40e1a2e0e7786afc5ea8~mv2.jpeg"},
+    { coords: [42.764404, 10.397397], nom: "Marina Porto Azzurro, île d'Elbe", date: "19 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_53fb653624194b43b4140074a720b7d0~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
