--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [42.401760, 11.210145], nom: "Marina Cala Galera à Porto Ercole, Toscane", date: "14 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_f0ac5c671deb40e1a2e0e7786afc5ea8~mv2.jpeg"},
     { coords: [42.764404, 10.397397], nom: "Marina Porto Azzurro, île d'Elbe", date: "19 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_53fb653624194b43b4140074a720b7d0~mv2.jpeg"},
     { coords: [44.134614, 8.2689480], nom: "Marina di Loano, Ligurie", date: "24 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_e914a258f6cf469ea35704e65e9d0629~mv2.jpeg"},
-    { coords: [43.879411, 8.0271540], nom: "Imperia, Ligurie", date: "25 novembre 2025"},
+    { coords: [43.879411, 8.0271540], nom: "Imperia, Ligurie", date: "25 novembre 2025", image: "https://static.wixstatic.com/media/e51b28_b2affa9fba344fb69a5a747baeaec18e~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
